src/App.css
#home{
  height: 100vh;
}
#home,#about,#events,#team{
  width: 100vw;
  padding: 1rem;
}
#about,#team,#events{
  height: max-content;
}
.bg{
  position: relative;
  background: url('./assets/bg.svg');
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  z-index: -1;
  
}
p{
  color: rgb(94, 94, 94);
}
@media(min-width:1024px){
  #about,#events,#team{
    height: 100vh;
  }
  
}

